--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,7 @@ button {
 
 .signInBar,
 .signUpBar {
-  margin-top: 3rem;
+  /*margin-top: 3rem;*/
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -264,7 +264,7 @@ button {
 }
 
 .socialLogin {
-  margin-top: 4rem;
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -289,11 +289,11 @@ button {
 }
 
 .registerLink {
-  margin-top: 4rem;
+  /*margin-top: 4rem;*/
   color: #00cc66;
   font-weight: 600;
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 1217px) {
